Final changes to the user interfaces.

--- a/A01283152/Laboratorio1/index.html
+++ b/A01283152/Laboratorio1/index.html
@@ -6,12 +6,8 @@
         <title>Registro</title>
     </head>
     <body>
-        <h1>Formulario</h1>
-        <div class="navbar">
-            <p><a href="index.html">Inicio</a></p>
-        </div>
-        <div class="formulario">
-            <h2 id="title_form">Registrar</h2>
+        <div class="formulario center_obj">
+            <p id="title_form">Registrar</p>
             <form action="" method="post">
                 <label for="name">Nombre completo</label>
                 <input type="text" name="user_name" id="name" placeholder="Tu nombre...">
@@ -26,7 +22,7 @@
                 <input type="text" id="password" name="user_password" placeholder="Tu contraseña segura...">
 
                 <div id="footer_register_form">
-                    <p id="footer_text">¿Ya tienes una cuenta? Haz click <a href="">aquí</a>!</p><button type="submit"><p id="register_button_text">Registrar</p></button>
+                    <p id="footer_text">Ya tienes una cuenta? Entra <a href="">aquí</a>!</p><button type="submit"><p id="register_button_text">Registrar</p></button>
                 </div>
             </form>
         </div>
