Minor change in style to fix presentation of anchor tags.

--- a/A01283152/Laboratorio1/index.html
+++ b/A01283152/Laboratorio1/index.html
@@ -22,7 +22,7 @@
                 <input type="text" id="password" name="user_password" placeholder="Tu contraseña segura...">
 
                 <div id="footer_register_form">
-                    <p id="footer_text">Ya tienes una cuenta? Entra <a href="">aquí</a>!</p><button type="submit"><p id="register_button_text">Registrar</p></button>
+                    <p id="footer_text">Ya tienes una cuenta? <a href="#">Entra aquí!</a></p><button type="submit"><p id="register_button_text">Registrar</p></button>
                 </div>
             </form>
         </div>
